# sillysearch

./: .gitignore  LICENSE  README.md  codesearch.cabal  sillysearch.cabal
src/: Main.hs
