name:                codesearch
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/riverrun/codesearch#readme
license:             BSD3
license-file:        LICENSE
author:              David Whitlock
maintainer:          alovedalongthe@gmail.com
copyright:           2016 David Whitlock
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable codesearch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , directory >= 1.2
                     , filepath >= 1.4
                     , regex-compat
                     , regex-posix
                     , bytestring
